[package]
name = "context-map"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.13"
